--- a/catalog.html
+++ b/catalog.html
@@ -139,7 +139,81 @@
       
     <div class="product-list-hotel">
       <ul class="product-list">
-        <li class="product-card">
+
+        <li class="product-card-grid-box">
+          <a class="product-card-link" href="#">
+            <img class="product-card-image" src="images/hotel/hotel-1-1.jpg" width="300" height="211" alt="Гостиница вид на звезды">
+          </a>
+          <h3 class="product-card-title">Amara Resort & Spa</h3>
+          <p class="hotel-card-hotel">Гостиница</p>
+          <b class="hotel-card-price">От 4000 ₽</b>
+          <a class="button product-card-more" href="#">подробнее</a>
+          <button class="button product-card-button">в избранное</button>
+          <p class="rating-star">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <span class="visually-hidden">4 звезды</span>
+          </p>
+          <b class="button rating-number">Рейтинг: 8,5</b>
+        </li>
+
+        <li class="product-card-grid-box">
+          <a class="product-card-link" href="#">
+            <img class="product-card-image" src="images/hotel/hotel-1-2.jpg" width="300" height="211" alt="Гостиница вид на звезды">
+          </a>
+          <h3 class="product-card-title">Villas at Poco Diablo</h3>
+          <p class="hotel-card-hotel">Гостиница</p>
+          <b class="hotel-card-price">От 5000 ₽</b>
+          <a class="button product-card-more" href="#">подробнее</a>
+          <button class="button product-card-button">в избранное</button>
+          <p class="rating-star">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <span class="visually-hidden">4 звезды</span>
+          </p>
+          <b class="button rating-number">Рейтинг: 9,2</b>
+        </li>
+
+        <li class="product-card-grid-box">
+          <a class="product-card-link" href="#">
+            <img class="product-card-image" src="images/hotel/hotel-1-3.jpg" width="300" height="211" alt="Гостиница вид на звезды">
+          </a>
+          <h3 class="product-card-title">Desert Quail Inn</h3>
+          <p class="hotel-card-hotel">Гостиница</p>
+          <b class="hotel-card-price">От 2500 ₽</b>
+          <a class="button product-card-more" href="#">подробнее</a>
+          <button class="button product-card-button">в избранное</button>
+          <p class="rating-star">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <span class="visually-hidden">3 звезды</span>
+          </p>
+          <b class="button rating-number">Рейтинг: 6,9</b>
+        </li>
+
+        <li class="product-card-grid-box">
+          <a class="product-card-link" href="#">
+            <img class="product-card-image" src="images/hotel/hotel-1-4.jpg" width="300" height="211" alt="Гостиница вид на звезды">
+          </a>
+          <h3 class="product-card-title">GreenTree Inn</h3>
+          <p class="hotel-card-hotel">Гостиница</p>
+          <b class="hotel-card-price">От 1500 ₽</b>
+          <a class="button product-card-more" href="#">подробнее</a>
+          <button class="button product-card-button">в избранное</button>
+          <p class="rating-star">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <span class="visually-hidden">2 звезды</span>
+          </p>
+          <b class="button rating-number">Рейтинг: 5,0</b>
+        </li>
+
+        <!-- <li class="product-card">
           <a class="product-card-link" href="#">
             <img class="product-card-image" src="images/hotel/hotel-1-1.jpg" width="300" height="211" alt="Гостиница вид на звезды">
             <h3 class="product-card-title">Amara Resort & Spa</h3>
@@ -234,7 +308,7 @@
           </p>
           <b class="button overall-size rating-number">Рейтинг: 5,0</b>
         </li>
-        </div>
+        </div> -->
       </ul>
     </div>
 
