--- a/catalog.html
+++ b/catalog.html
@@ -140,30 +140,33 @@
     <div class="product-list-hotel">
       <ul class="product-list">
 
-        <li class="product-card-grid-box">
+        <li class="product-card">
           <a class="product-card-link" href="#">
             <img class="product-card-image" src="images/hotel/hotel-1-1.jpg" width="300" height="211" alt="Гостиница вид на звезды">
+            <h3 class="product-card-title">Amara Resort & Spa</h3>
           </a>
-          <h3 class="product-card-title">Amara Resort & Spa</h3>
+          <div class="product-card-grid-box">
           <p class="hotel-card-hotel">Гостиница</p>
           <b class="hotel-card-price">От 4000 ₽</b>
           <a class="button product-card-more" href="#">подробнее</a>
           <button class="button product-card-button">в избранное</button>
           <p class="rating-star">
-            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <div class="img-star"></div>
+            <div class="img-star"></div>
+            <div class="img-star"></div>
+            <div class="img-star"></div>
             <span class="visually-hidden">4 звезды</span>
           </p>
           <b class="button rating-number">Рейтинг: 8,5</b>
+          </div>
         </li>
 
-        <li class="product-card-grid-box">
+        <li class="product-card">
           <a class="product-card-link" href="#">
             <img class="product-card-image" src="images/hotel/hotel-1-2.jpg" width="300" height="211" alt="Гостиница вид на звезды">
+            <h3 class="product-card-title">Villas at Poco Diablo</h3>
           </a>
-          <h3 class="product-card-title">Villas at Poco Diablo</h3>
+          <div class="product-card-grid-box">
           <p class="hotel-card-hotel">Гостиница</p>
           <b class="hotel-card-price">От 5000 ₽</b>
           <a class="button product-card-more" href="#">подробнее</a>
@@ -176,13 +179,15 @@
             <span class="visually-hidden">4 звезды</span>
           </p>
           <b class="button rating-number">Рейтинг: 9,2</b>
+          </div>
         </li>
 
-        <li class="product-card-grid-box">
+        <li class="product-card">
           <a class="product-card-link" href="#">
             <img class="product-card-image" src="images/hotel/hotel-1-3.jpg" width="300" height="211" alt="Гостиница вид на звезды">
+            <h3 class="product-card-title">Desert Quail Inn</h3>
           </a>
-          <h3 class="product-card-title">Desert Quail Inn</h3>
+          <div class="product-card-grid-box">
           <p class="hotel-card-hotel">Гостиница</p>
           <b class="hotel-card-price">От 2500 ₽</b>
           <a class="button product-card-more" href="#">подробнее</a>
@@ -194,13 +199,15 @@
             <span class="visually-hidden">3 звезды</span>
           </p>
           <b class="button rating-number">Рейтинг: 6,9</b>
+          </div>
         </li>
 
-        <li class="product-card-grid-box">
+        <li class="product-card">
           <a class="product-card-link" href="#">
             <img class="product-card-image" src="images/hotel/hotel-1-4.jpg" width="300" height="211" alt="Гостиница вид на звезды">
+            <h3 class="product-card-title">GreenTree Inn</h3>
           </a>
-          <h3 class="product-card-title">GreenTree Inn</h3>
+          <div class="product-card-grid-box">
           <p class="hotel-card-hotel">Гостиница</p>
           <b class="hotel-card-price">От 1500 ₽</b>
           <a class="button product-card-more" href="#">подробнее</a>
@@ -211,6 +218,7 @@
             <span class="visually-hidden">2 звезды</span>
           </p>
           <b class="button rating-number">Рейтинг: 5,0</b>
+          </div>
         </li>
 
         <!-- <li class="product-card">
